--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: SolarSynk
-url: 'https://github.com/martinville/solarsynkv2'
-maintainer: Martin Viljoen mailmartinviljoen@gmail.com
+url: 'https://github.com/jujo1/Sunsynch_2.0'
+maintainer: jujo1
