--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-name: "SolarSynk"
+name: "SynSync"
 description: "Home Assistant add-on for syncing solar/inverter data from SynSynk.net"
-version: "2.1.3"
-slug: "solar_synk"
+version: "1.0"
+slug: "sun_synch"
 init: false
 arch:
   - aarch64
