--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: SolarSynk
-url: 'https://github.com/jujo1/Sunsynch_2.0'
+name: SynSync
+url: 'https://github.com/jujo1/SynSync'
 maintainer: jujo1
