--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 name: "SunSync"
 description: "Home Assistant add-on for syncing solar/inverter data from SynSynk.net"
-version: "1.0"
-slug: "sun_synch"
+version: "1.1"
+slug: "sunsync"
 init: false
 arch:
   - aarch64
