Improve error handling - Dynamically create Home Assistant entities - Follow better bash practices - Improve code structure and readability - Add better retry mechanisms for API calls

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ logs/
 # Local configuration file
 config_local.yaml
 
+# Original run script
+run_orig.sh
+
 # Jupyter Notebook
 .ipynb_checkpoints
 
