--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,6 @@
 name: SunSync
 url: 'https://github.com/jujo1/SunSync'
 maintainer: jujo1
+description: 'Home Assistant add-on for syncing solar/inverter data from SunSynk.net'
+homeassistant: '2023.8.0'
+version: '1.0.2'
