--- a/config.yaml
+++ b/config.yaml
@@ -21,6 +21,8 @@ options:
   Refresh_rate: 300
   Enable_HTTPS: false
   Enable_Verbose_Log: false
+  entity_prefix: "sunsync"
+  include_serial_in_name: true
 
 schema:
   sunsynk_user: str
@@ -32,3 +34,11 @@ schema:
   Refresh_rate: int
   Enable_HTTPS: bool
   Enable_Verbose_Log: bool
+  entity_prefix:
+    name: Entity Prefix
+    description: Prefix used for all entities (e.g., sensor.prefix_battery_soc)
+    default: "sunsync"
+  include_serial_in_name:
+    name: Include Serial Number
+    description: Include inverter serial number in entity names
+    default: true
