--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 name: "SunSync"
-description: "Home Assistant add-on for syncing solar/inverter data from SynSynk.net"
+description: "Home Assistant add-on for syncing solar/inverter data from SunSynk.net"
 version: "1.0.13"
 slug: "sunsync"
 init: false
@@ -34,11 +34,5 @@ schema:
   Refresh_rate: int
   Enable_HTTPS: bool
   Enable_Verbose_Log: bool
-  entity_prefix:
-    name: Entity Prefix
-    description: Prefix used for all entities (e.g., sensor.prefix_battery_soc)
-    default: "sunsync"
-  include_serial_in_name:
-    name: Include Serial Number
-    description: Include inverter serial number in entity names
-    default: true
+  entity_prefix: str
+  include_serial_in_name: bool
